[package]
name = "iam-ssh-agent"
description = "ssh-agent compatible daemon that uses a serverless backend for list and sign operations."
version = "0.2.1"
authors = ["Keith Duncan <keith_duncan@me.com>"]
edition = "2018"
repository = "https://github.com/keithduncan/iam-ssh-agent"
license = "MIT"
keywords = [ "ssh", "ssh-agent", "aws" ]
categories = [ "development-tools" ]
include = ["/src"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh-agent = "0.2.1"
clap = "2.33.0"
rusoto_core = { version = "0.42.0", default_features = false, features=["rustls"] }
url = "2.1.1"
futures = "0.1.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
openssh-keys = "0.4.1"
base64 = "0.11.0"
env_logger = "0.7.1"
