[package]
name = "iam-ssh-agent"
description = "ssh-agent compatible daemon that forwards list-keys and sign-data operations to an API Gateway backend, access controlled by the caller's IAM identity."
version = "0.3.0"
authors = ["Keith Duncan <keith_duncan@me.com>"]
edition = "2018"
repository = "https://github.com/keithduncan/iam-ssh-agent"
license = "BSD-3-Clause"
keywords = [ "ssh", "ssh-agent", "aws" ]
categories = [ "command-line-utilities", "development-tools" ]
include = ["/src"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh-agent = "0.2.1"
clap = "2.33.0"
textwrap = "0.11.0"
rusoto_core = { version = "0.42.0", default_features = false, features=["rustls"] }
url = "2.1.1"
futures = "0.1.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
openssh-keys = "0.4.1"
base64 = "0.11.0"
env_logger = "0.7.1"
signal-hook = "0.1.13"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
iam-ssh-agent = { path = "/usr/bin/iam-ssh-agent" }
